@@ -1,33 +1,26 @@
 package com.putoet.day4;
 
+import org.jetbrains.annotations.NotNull;
+
 import java.time.LocalDate;
 import java.time.LocalDateTime;
 import java.util.*;
-import java.util.regex.Matcher;
 import java.util.regex.Pattern;
 
 import static java.util.stream.Collectors.*;
 
-public class GuardLog {
+record GuardLog(@NotNull List<GuardEvent> events) {
     private static final Pattern PATTERN = Pattern.compile("\\[(\\d+)-(\\d+)-(\\d+) (\\d+):(\\d+)].*");
 
-    private final List<GuardEvent> events;
-
-    private GuardLog(List<GuardEvent> events) {
-        this.events = events;
-    }
-
-    public static GuardLog of(List<String> lines) {
-        assert lines != null;
-
+    public static GuardLog of(@NotNull List<String> lines) {
         final List<GuardEvent> events = lines.stream()
                 .map(GuardLog::of)
                 .sorted(Comparator.naturalOrder())
-                .collect(toList());
+                .toList();
 
         Guard prev = null;
-        for (final GuardEvent event : events) {
-            if (event.event() == WatchEVent.START_WATCH)
+        for (final var event : events) {
+            if (event.event() == WatchEvent.START_WATCH)
                 prev = event.guard();
             else
                 event.setGuard(prev);
@@ -37,38 +30,38 @@ public class GuardLog {
     }
 
     private static GuardEvent of(String line) {
-        final LocalDateTime dateTime = dateTimeOf(line);
+        final var dateTime = dateTimeOf(line);
         return line.contains("#") ? startWatch(dateTime, line) : sleepAwake(dateTime, line);
     }
 
     private static GuardEvent sleepAwake(LocalDateTime dateTime, String line) {
-        return new GuardEvent(dateTime, line.contains("falls") ? WatchEVent.FALL_ASLEEP : WatchEVent.WAKE_UP);
+        return new GuardEvent(dateTime, line.contains("falls") ? WatchEvent.FALL_ASLEEP : WatchEvent.WAKE_UP);
     }
 
     private static GuardEvent startWatch(LocalDateTime dateTime, String line) {
-        final int hash = line.indexOf("#");
-        final int id = id(line.substring(hash + 1));
+        final var hash = line.indexOf("#");
+        final var id = id(line.substring(hash + 1));
         return new GuardEvent(dateTime, new Guard(id));
     }
 
     private static int id(String line) {
-        final StringBuilder sb = new StringBuilder();
-        for (int i = 0; Character.isDigit(line.charAt(i)); i++)
+        final var sb = new StringBuilder();
+        for (var i = 0; Character.isDigit(line.charAt(i)); i++)
             sb.append(line.charAt(i));
 
         return Integer.parseInt(sb.toString());
     }
 
     private static LocalDateTime dateTimeOf(String line) {
-        final Matcher matcher = PATTERN.matcher(line);
+        final var matcher = PATTERN.matcher(line);
         if (!matcher.matches())
             throw new IllegalArgumentException("Invalid dateTime for line '" + line + "'");
 
-        final int year = Integer.parseInt(matcher.group(1));
-        final int month = Integer.parseInt(matcher.group(2));
-        final int day = Integer.parseInt(matcher.group(3));
-        final int hour = Integer.parseInt(matcher.group(4));
-        final int minute = Integer.parseInt(matcher.group(5));
+        final var year = Integer.parseInt(matcher.group(1));
+        final var month = Integer.parseInt(matcher.group(2));
+        final var day = Integer.parseInt(matcher.group(3));
+        final var hour = Integer.parseInt(matcher.group(4));
+        final var minute = Integer.parseInt(matcher.group(5));
 
         return LocalDateTime.of(year, month, day, hour, minute);
     }
@@ -84,26 +77,22 @@ public class GuardLog {
                 .collect(toList());
     }
 
-    public Map<LocalDate, List<GuardEvent>> shifts(Guard guard) {
-        assert guard != null;
-
+    public Map<LocalDate, List<GuardEvent>> shifts(@NotNull Guard guard) {
         return events.stream()
                 .filter(event -> event.guard().equals(guard))
-                .filter(event -> event.event() != WatchEVent.START_WATCH)
+                .filter(event -> event.event() != WatchEvent.START_WATCH)
                 .collect(groupingBy(event -> event.dateTime().toLocalDate(), toList()));
     }
 
     public Optional<Guard> longestSleeper() {
-        final Map<Guard, Integer> sleeping =
-                guards().stream().collect(toMap(guard -> guard, this::sleepTime));
-
+        final var sleeping = guards().stream().collect(toMap(guard -> guard, this::sleepTime));
         return maxSleepingGuard(sleeping);
     }
 
     private Optional<Guard> maxSleepingGuard(Map<Guard, Integer> sleeping) {
-        int max = Integer.MIN_VALUE;
+        var max = Integer.MIN_VALUE;
         Guard sleepiest = null;
-        for (Guard guard : sleeping.keySet()) {
+        for (var guard : sleeping.keySet()) {
             if (sleeping.get(guard) > max) {
                 sleepiest = guard;
                 max = sleeping.get(guard);
@@ -113,31 +102,25 @@ public class GuardLog {
     }
 
     public Optional<Guard> mostFrequentSleeper() {
-        final List<Guard> guards = guards();
-        if (guards.size() == 0)
+        final var guards = guards();
+        if (guards.isEmpty())
             throw new IllegalArgumentException("No guards in the log");
 
-        final Map<Guard, Integer> sleeping =
-                guards.stream().collect(toMap(guard -> guard, this::sleepMinuteFrequency));
-
+        final var sleeping = guards.stream().collect(toMap(guard -> guard, this::sleepMinuteFrequency));
         return maxSleepingGuard(sleeping);
     }
 
-    public int sleepTime(Guard guard) {
-        assert guard != null;
-
-        final int[] timeLine = timeLine(guard);
+    public int sleepTime(@NotNull Guard guard) {
+        final var timeLine = timeLine(guard);
         return Arrays.stream(timeLine).filter(i -> i != 0).sum();
     }
 
-    public int sleepMinute(Guard guard) {
-        assert guard != null;
+    public int sleepMinute(@NotNull Guard guard) {
+        final var timeLine = timeLine(guard);
 
-        final int[] timeLine = timeLine(guard);
-
-        int max = Integer.MIN_VALUE;
-        int maxMinute = Integer.MIN_VALUE;
-        for (int m = 0; m < 60; m++) {
+        var max = Integer.MIN_VALUE;
+        var maxMinute = Integer.MIN_VALUE;
+        for (var m = 0; m < 60; m++) {
             if (timeLine[m] > max) {
                 max = timeLine[m];
                 maxMinute = m;
@@ -147,13 +130,11 @@ public class GuardLog {
         return maxMinute;
     }
 
-    public int sleepMinuteFrequency(Guard guard) {
-        assert guard != null;
+    public int sleepMinuteFrequency(@NotNull Guard guard) {
+        final var timeLine = timeLine(guard);
 
-        final int[] timeLine = timeLine(guard);
-
-        int max = Integer.MIN_VALUE;
-        for (int m = 0; m < 60; m++) {
+        var max = Integer.MIN_VALUE;
+        for (var m = 0; m < 60; m++) {
             if (timeLine[m] > max) {
                 max = timeLine[m];
             }
@@ -163,19 +144,19 @@ public class GuardLog {
     }
 
     private int[] timeLine(Guard guard) {
-        final int[] timeLine = new int[60];
+        final var timeLine = new int[60];
 
-        final Map<LocalDate, List<GuardEvent>> shifts = shifts(guard);
-        if (shifts.size() == 0)
+        final var shifts = shifts(guard);
+        if (shifts.isEmpty())
             return timeLine;
 
-        for (Map.Entry<LocalDate, List<GuardEvent>> entry : shifts.entrySet()) {
-            final List<GuardEvent> events = entry.getValue();
-            for (int i = 0; i < events.size(); i += 2) {
-                final GuardEvent asleep = events.get(i);
-                final GuardEvent awake = events.get(i + 1);
+        for (var entry : shifts.entrySet()) {
+            final var events = entry.getValue();
+            for (var i = 0; i < events.size(); i += 2) {
+                final var asleep = events.get(i);
+                final var awake = events.get(i + 1);
 
-                for (int m = asleep.dateTime().getMinute(); m < awake.dateTime().getMinute(); m++) {
+                for (var m = asleep.dateTime().getMinute(); m < awake.dateTime().getMinute(); m++) {
                     timeLine[m] = timeLine[m] + 1;
                 }
             }
